# shaggy

./: .gitignore  README.md  pyproject.toml
notebook/: demo.ipynb
shaggy/: layers.py  loss.py  optimizer.py  tools.py  utils.py
shaggy/models/: cae.py
tests/: test_autoencoder.py  test_layers.py  test_loss.py  test_tools.py
